<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_main_activity_color">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/select_lock_type"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/setPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="170dp"
        android:text="@string/pattern"
        android:textColor="#fff" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/setNormalPINSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/setPattern"
        android:layout_marginTop="10dp"
        android:text="@string/pin"
        android:textColor="#fff" />

    <Button
        android:id="@+id/strt"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="#105ca4"
        android:text="@string/next"
        android:textColor="#fff" />

</RelativeLayout>