<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/smooth_red">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/smooth_red"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <!--app:tabSelectedTextColor="@color/secondary_text"-->
        <RelativeLayout
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avi"
                style="@style/AVLoadingIndicatorView.Large"
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:layout_centerInParent="true"
                android:visibility="visible"
                app:indicatorColor="#ffffff"
                app:indicatorName="LineScalePulseOutRapidIndicator" />

            <com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:visibility="gone"
                app:rb_color="#0099CC"
                app:rb_duration="5000"
                app:rb_radius="32dp"
                app:rb_rippleAmount="1"
                app:rb_scale="3">

                <ImageView
                    android:id="@+id/imgv"
                    android:layout_width="230dp"
                    android:layout_height="95dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/frequent"
                    android:visibility="visible" />


            </com.skyfishjy.library.RippleBackground>

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="340dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bright_blue">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="F103"
                        android:textAlignment="center"
                        android:textAppearance="@android:style/TextAppearance.Material.Display1"
                        android:textColor="#ffffff"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="monospace"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:targetApi="lollipop" />
                </RelativeLayout>

                <com.google.android.gms.ads.AdView
                    android:id="@+id/admob_adview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:visibility="visible"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit">


                </com.google.android.gms.ads.AdView>



                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:text="Having issue with call recording ?"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Body2"
                    android:textSize="18sp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView5"
                    android:padding="8sp"
                    android:text="@string/recoring_issue"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Button"
                    app:layout_constraintLeft_toLeftOf="@+id/textView5"
                    app:layout_constraintRight_toRightOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView6"
                    android:padding="8dp"
                    android:text="@string/issue_2"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.DialogWindowTitle"
                    android:textColor="@color/smooth_red_dark"
                    android:textSize="16sp"
                    app:layout_constraintHorizontal_bias="0.558"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    tools:targetApi="lollipop" />

                <ImageView
                    android:layout_width="331dp"
                    android:layout_height="233dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="33dp"
                    android:src="@drawable/screenshot"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.513"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.0" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>